--- a/app/templates/views/login.html
+++ b/app/templates/views/login.html
@@ -27,8 +27,8 @@
             <input type="password" ng-model="confirm" />
         </label>
         <button ng-click="loginPassword()" ng-hide="createMode">Log In</button>
-        <button ng-click="createMode = true" ng-hide="createMode">Create Account</button>
-        <button ng-cloak ng-show="createMode" ng-click="createAccount()">Ready to Create</button>
+        <button ng-click="createMode = true" ng-hide="createMode">Register</button>
+        <button ng-cloak ng-show="createMode" ng-click="createAccount()">Create Account</button>
         <button ng-cloak ng-show="createMode" ng-click="createMode = false">Cancel</button>
 
     </form>
